test/errors/multi_errors1.input.asm
* = $801

!let a = 0
!let b = 0

!let c = xx  ; should show error
!let d = yy  ; should also show error on this line

    lda #0
